--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -6,14 +6,14 @@
     <form action="/register" method="post" class="row g-1">
           <div class="col-md-4">
           <label for="NombreP" class="form-label">Nombre del producto </label>
-          <input type="text"  id="NombreP" name="NombreP"class="form-control" />
+          <input type="text"  id="NombreP" name="NombreP"class="form-control"  required/>
         </div>
         <div class="col-md-4">
           <label for="inputPrecio" id="Precio"class="form-label">Precio del Producto</label>
-          <input type="text" class="form-control" id="Precio"name="PrecioProducto" />
+          <input type="text" class="form-control" id="Precio"name="PrecioProducto"  required/>
         </div>
-        <button class="btn btn-primary">Guardar</button>
-        <button class="btn btn-primary"><a href="/" style="color: aliceblue;">Inicio</a></button>
+        <input type="submit" value="Registrar">
+        
 
     </form>
  
