--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -6,6 +6,8 @@
   <div class="container-fluid">
     <img src="/images/Logo Tienda.png" style="height: 85px; width: 85px;" >
     <a class="navbar-brand"></a>
+
     <h3>Super Tienda la 1ra</h3>
+    <button><a href="/salir">Cerrar sesión</a></button>
   </div>
 </nav>
