--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -4,7 +4,7 @@
  {{!-- Barra de navegación --}}
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
   <div class="container-fluid">
-    <img src="/images/Logo Tienda.png" style="height: 85px; width: 85px;" >
+    <a href="/"><img src="/images/Logo Tienda.png" style="height: 85px; width: 85px;" ></a>
     <a class="navbar-brand"></a>
 
     <h3>Super Tienda la 1ra</h3>
